--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,17 +6,12 @@
         <div>
             <h1><a href="/">Django Blog</a></h1>
         </div>
-
+    {% for post in posts %}
         <div>
-            <p>published: 31.01.2021, 12:13</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Batman is a superhero who appears in American comic books published by DC Comics. Batman was created by artist Bob Kane and writer Bill Finger, and debuted in the 27th issue of the comic book Detective Comics on March 30, 1939.</p>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-
-        <div>
-            <p>published: 31.01.2021, 12:16</p>
-            <h2><a href="">My second post</a></h2>
-            <p> In the DC Universe continuity, Batman is the alias of Bruce Wayne, a wealthy American playboy, philanthropist, and owner of Wayne Enterprises based in Gotham City.</p>
-        </div>
+    {% endfor %}
     </body>
 </html>
